--- a/RTRS/RTRS/Base.lproj/LaunchScreen.storyboard
+++ b/RTRS/RTRS/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,13 +17,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RickyLogo" translatesAutoresizingMaskIntoConstraints="NO" id="beO-5z-TDv">
-                                <rect key="frame" x="199" y="445" width="16" height="16"/>
+                                <rect key="frame" x="0.0" y="-82" width="414" height="1060"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="beO-5z-TDv" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ETZ-Yu-uRD"/>
-                            <constraint firstItem="beO-5z-TDv" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="auF-d0-RiW"/>
+                            <constraint firstItem="beO-5z-TDv" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="JEM-Sg-pm9"/>
+                            <constraint firstItem="beO-5z-TDv" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="auF-d0-RiW"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="beO-5z-TDv" secondAttribute="trailing" constant="1.1368683772161603e-13" id="dGA-yV-jX2"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
